--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,12 @@
     "compilerOptions" : {
         "outDir" : "./built",
         "allowJs": true,
-        "target": "es5"
+        "target": "es6",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
     },
     "include": [
         "./src/**/*"
