--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "pharmacy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "tsc",
+    "start": "node built/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +14,8 @@
     "@types/node": "^10.12.18",
     "discord.js": "^11.4.2",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0"
   }
 }
