--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "tsc",
-    "start": "node built/server.js"
+    "start": "node -r dotenv/config built/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^10.12.18",
     "discord.js": "^11.4.2",
-    "express": "^4.16.4"
+    "dotenv": "^6.2.0",
+    "erlpack": "github:hammerandchisel/erlpack",
+    "express": "^4.16.4",
+    "uws": "^99.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0"
