--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
     "@types/node": "^10.12.18",
     "big.js": "^5.2.2",
     "bluebird": "^3.5.3",
+    "dirty-json": "git+https://github.com/auburnsummer/dirty-json.git",
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "fuse.js": "^3.3.0",
+    "googleapis": "^39.2.0",
+    "imgur": "^0.3.1",
+    "json5": "^2.1.0",
+    "jszip": "^3.2.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "uuid": "^3.3.2",
     "uws": "^99.0.0",
     "xregexp": "^4.2.0"
   },
