--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/node": "^10.14.17",
     "big.js": "^5.2.2",
     "bluebird": "^3.5.5",
-    "discord.js": "^11.5.1",
+    "debug": "^4.1.1",
+    "discord.js": "^11.5.2",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "googleapis": "^42.0.0",
-    "grpc": "^1.23.3",
+    "grpc": "^1.24.2",
     "imgur": "^0.3.1",
     "json5": "github:auburnsummer/json5#a88e82eeb570ce23a0eb109a64d95bcb59e8786b",
     "jszip": "^3.2.2",
